# aura

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  sketch.aura
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codex-pr-review.yml  release.yml  snapshot-update.yml
benchmarks/: tasks.md
crates/aura-agent/src/: lib.rs  protocol.rs  server.rs
crates/aura-backend-compose/: Cargo.toml
crates/aura-backend-compose/src/: codegen.rs  lib.rs
crates/aura-backend-swift/: Cargo.toml
crates/aura-backend-swift/src/: codegen.rs  lib.rs
crates/aura-backend-tui/: Cargo.toml
crates/aura-backend-tui/src/: lib.rs
crates/aura-backend-web/: Cargo.toml
crates/aura-backend-web/src/: codegen.rs  lib.rs
crates/aura-backend-win/: Cargo.toml
crates/aura-backend-win/src/: lib.rs
crates/aura-cli/: Cargo.toml
crates/aura-cli/src/: main.rs
crates/aura-core/: Cargo.toml
crates/aura-core/src/: cache.rs  lib.rs  sketch.rs
crates/aura-core/src/ast/: mod.rs
crates/aura-core/src/design/: mod.rs
crates/aura-core/src/errors/: mod.rs
crates/aura-core/src/hir/: mod.rs  nodes.rs
crates/aura-core/src/lexer/: mod.rs  tokens.rs
crates/aura-core/src/lir/: mod.rs
crates/aura-core/src/parser/: mod.rs
crates/aura-core/src/semantic/: mod.rs  scope.rs
crates/aura-core/src/types/: mod.rs
crates/aura-core/tests/: conformance.rs
npm-package/: README.md  index.js  package.json
npm-package/examples/: counter.aura  minimal.aura
npm-package/syntaxes/: aura.tmLanguage.json
showcase/: chat.aura  gallery.aura  login.aura  settings.aura  taskflow.aura  timer.aura  weather.aura
showcase/apps/: index.html
showcase/apps/chat/: app.js  index.html
showcase/apps/gallery/: app.js  index.html
showcase/apps/login/: app.js  index.html
showcase/apps/settings/: app.js  index.html
showcase/apps/taskflow/: app.js
showcase/apps/timer/: app.js  index.html  styles.css
showcase/apps/weather/: app.js  index.html  styles.css
spec/: language.md
tests/conformance/: 001_hello_world.aura  002_counter.aura  003_model_and_list.aura
