[package]
name = "aura-core"
description = "Aura language compiler core: lexer, parser, type system, IR"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
logos.workspace = true
chumsky.workspace = true
ariadne.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
insta.workspace = true
aura-backend-web = { path = "../aura-backend-web" }
aura-backend-swift = { path = "../aura-backend-swift" }
aura-backend-compose = { path = "../aura-backend-compose" }
